hphp/hack/test/typecheck/expression_trees/splice_variable3.php.like_types.exp
File "splice_variable3.php", line 14, characters 5-28:
Expected `ExprTree<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "splice_variable3.php", line 5, characters 25-53:
  But got `dynamic` because it is an unenforceable type
